configuring jacoco for coverage

--- a/pom.xml
+++ b/pom.xml
@@ -1036,13 +1036,19 @@
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
+        <version>0.8.6</version>
         <executions>
           <execution>
-            <id>report</id>
             <goals>
-              <goal>report-aggregate</goal>
+              <goal>prepare-agent</goal>
             </goals>
+          </execution>
+          <execution>
+            <id>report</id>
             <phase>verify</phase>
+            <goals>
+              <goal>report</goal>
+            </goals>
           </execution>
         </executions>
       </plugin>
