--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -252,6 +252,10 @@
             <goals>
               <goal>prepare-agent</goal>
             </goals>
+            <configuration>
+              <destFile>${basedir}/target/jacoco.exec</destFile>
+              <propertyName>argLine</propertyName>
+            </configuration>
           </execution>
           <execution>
             <id>report</id>
@@ -259,8 +263,25 @@
             <goals>
               <goal>report</goal>
             </goals>
+            <configuration>
+              <dataFile>${basedir}/target/jacoco.exec</dataFile>
+            </configuration>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${maven-surefire-plugin.version}</version>
+        <configuration>
+          <argLine>@{argLine} -Xmx2G -Djava.net.preferIPv4Stack=true -Dio.netty.leakDetection.level=paranoid</argLine>
+          <redirectTestOutputToFile>${redirectTestOutputToFile}</redirectTestOutputToFile>
+          <forkCount>${forkCount.variable}</forkCount>
+          <reuseForks>false</reuseForks>
+          <trimStackTrace>false</trimStackTrace>
+          <forkedProcessTimeoutInSeconds>1800</forkedProcessTimeoutInSeconds>
+          <rerunFailingTestsCount>${testRetryCount}</rerunFailingTestsCount>
+        </configuration>
       </plugin>
     </plugins>
   </build>
