--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -146,6 +146,12 @@
         </exclusions>
     </dependency>
     <dependency>
+      <groupId>org.pitest</groupId>
+      <artifactId>pitest-maven</artifactId>
+      <version>1.6.2</version>
+      <type>maven-plugin</type>
+    </dependency>
+    <dependency>
         <groupId>org.apache.kerby</groupId>
         <artifactId>kerb-simplekdc</artifactId>
         <version>${kerby.version}</version>
@@ -242,6 +248,20 @@
             </goals>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.pitest</groupId>
+        <artifactId>pitest-maven</artifactId>
+        <version>1.6.2</version>
+        <configuration>
+          <targetClasses>
+            <param>org.apache.bookkeeper.bookie.Bookie</param>
+            <param>org.apache.bookkeeper.client.BookKeeper</param>
+          </targetClasses>
+          <targetTests>
+            <param>org.apache.bookkeeper.mytests.*Test</param>
+          </targetTests>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.jacoco</groupId>
